--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
   var getWizardY = function (height) {
     return height / 3 * 2;
   }
-  
+
 </script>
 <script src="js/stat.js"></script>
+<script src="js/setup.js"></script>
 <script src="js/game.js"></script>
 </body>
 </html>
